did some changes
add server code

--- a/frontend/HBMS/package.json
+++ b/frontend/HBMS/package.json
@@ -1,12 +1,12 @@
 {
-  "name"                              : "hbms",
-  "version"                           : "1.0.0",
-  "main"                              : "node_modules/expo/AppEntry.js",
+  "name": "hbms",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start"                           : "expo start",
-    "android"                         : "expo start --android",
-    "ios"                             : "expo start --ios",
-    "web"                             : "expo start --web"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
     "@ant-design/react-native": "^5.0.4",
@@ -19,43 +19,45 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "axios"                           : "^1.3.4",
-    "body-parser"                     : "^1.20.2",
-    "dom-to-image"                    : "^2.6.0",
-    "expo"                            : "~48.0.15",
-    "expo-font"                       : "~11.1.1",
-    "expo-image-picker"               : "~14.1.1",
-    "expo-localization"               : "~14.1.1",
-    "expo-status-bar"                 : "~1.4.4",
-    "express"                         : "^4.18.2",
-    "i18n-js"                         : "^4.2.3",
-    "lodash.memoize"                  : "4.1.2",
-    "lottie-react-native"             : "5.1.4",
-    "moment"                          : "^2.29.4",
-    "native-base"                     : "2.13.8",
-    "react"                           : "18.2.0",
-    "react-native"                    : "0.71.8",
-    "react-native-animatable"         : "^1.3.3",
-    "react-native-elements"           : "^3.4.3",
-    "react-native-gesture-handler"    : "~2.9.0",
-    "react-native-image-picker"       : "^5.3.1",
-    "react-native-localization"       : "^2.3.1",
-    "react-native-localize"           : "^2.2.6",
-    "react-native-maps"               : "1.3.2",
-    "react-native-modal"              : "^13.0.1",
-    "react-native-network-info"       : "^5.2.1",
-    "react-native-paper"              : "3.1.1",
-    "react-native-reanimated"         : "~2.14.4",
-    "react-native-redash"             : "^18.1.0",
-    "react-native-search-bar"         : "^3.5.1",
-    "react-native-vector-icons"       : "^9.2.0",
-    "rn-fetch-blob"                   : "^0.12.0",
-    "uuid"                            : "^9.0.0",
-    "validator"                       : "^13.9.0"
+    "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
+    "dom-to-image": "^2.6.0",
+    "expo": "~48.0.15",
+    "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-localization": "~14.1.1",
+    "expo-status-bar": "~1.4.4",
+    "express": "^4.18.2",
+    "i18n-js": "^4.2.3",
+    "lodash.memoize": "4.1.2",
+    "lottie-react-native": "5.1.4",
+    "moment": "^2.29.4",
+    "native-base": "2.13.8",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-picker": "^5.3.1",
+    "react-native-linear-gradient": "^2.7.3",
+    "react-native-localization": "^2.3.1",
+    "react-native-localize": "^2.2.6",
+    "react-native-maps": "1.3.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-network-info": "^5.2.1",
+    "react-native-paper": "^3.1.1",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-redash": "^18.1.0",
+    "react-native-search-bar": "^3.5.1",
+    "react-native-vector-icons": "^9.2.0",
+    "rn-fetch-blob": "^0.12.0",
+    "uuid": "^9.0.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/expo-localization": "^3.0.0"
   },
-  "private"                           : true
+  "private": true
 }
